RESOLVED FIXED147358
[GTK] Fix empty space in popup menus when first item is selected
https://bugs.webkit.org/show_bug.cgi?id=147358
Summary [GTK] Fix empty space in popup menus when first item is selected
Carlos Garcia Campos
Reported 2015-07-28 05:19:38 PDT
Created attachment 257642 [details] Screenshot showing the problem It happens when one of the first elements are selected, because we try to center the current selection on the combo element. When the menu is large enough to make the element centered we need to leave empty space at the beginning. See the attached screenshot.
Attachments
Screenshot showing the problem (87.53 KB, image/png)
2015-07-28 05:19 PDT, Carlos Garcia Campos
no flags
Patch (1.99 KB, patch)
2015-07-28 05:26 PDT, Carlos Garcia Campos
mrobinson: review+
Screenshot with the patch applied (122.39 KB, image/png)
2015-07-28 05:26 PDT, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2015-07-28 05:26:18 PDT
Created attachment 257643 [details] Patch This fixes the issue.
Carlos Garcia Campos
Comment 2 2015-07-28 05:26:50 PDT
Created attachment 257644 [details] Screenshot with the patch applied
Carlos Garcia Campos
Comment 3 2015-07-28 23:49:57 PDT
Note You need to log in before you can comment on or make changes to this bug.